<resources>
    <string name="app_name">MakeUpBook</string>
    <string name="login">LOGIN</string>
    <string name="loginhint">Email Address</string>
    <string name="transition_photo_details">transition image</string>
    <string name="passwordhint">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="newUser">New User? SignUp Here</string>
    <string name="usernameMissingToast">Enter email address!</string>
    <string name="passwordToast">Enter password!</string>
    <string name="auth_failed">Email or Password incorrect</string>
    <string name="resetPassword">Reset Password</string>
    <string name="wantPage_title">I want these Items</string>
    <string name="havePage_title">I have these Items</string>
    <string name="resetText">Plese enter your e-mail adress below and we will send you password reset instructions.</string>
    <string name="resendemail">Email Address</string>
    <string name="logo_description">This is the app logo</string>
    <string name="enterEmail">Enter your registered email address.</string>
    <string name="emailSent">Password reset email is sent to your registered email address.</string>
    <string name="failedSending">Failed to send reset email!</string>
    <string name="signUp">Register</string>
    <string name="member">Already a member ?</string>
    <string name="passwordTooShotToast">Password too short, enter minimum 6 characters!</string>
    <string name="registrationFailed">Registration Failed !</string>
    <string name="userNameHint">Name</string>
    <string name="favPage">Favorites</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="allProducts">All</string>
    <string name="eyes">Eyes</string>
    <string name="face">Face</string>
    <string name="lips">Lips</string>
    <string name="nails">Nails</string>
    <string name="view_list">Your Lists</string>
    <string name="about">About Us</string>
    <string name="eyeshadow">eyeshadow</string>
    <string name="eyebrow">eyebrow</string>
    <string name="eyeliner">eyeliner</string>
    <string name="mascara">Mascara</string>
    <string name="nailPolish">nail_polish</string>
    <string name="blush">blush</string>
    <string name="bronzer">bronzer</string>
    <string name="foundation">foundation</string>
    <string name="lip_liner">lip_liner</string>
    <string name="lipstick">lipstick</string>
    <string name="signOut">Sign out</string>
    <string name="welcomMessage">Welcome to your Makeup book</string>
    <string name="filter">Filter</string>
    <string name="imagedes">Image of the product</string>
    <string name="by">By</string>
    <string name="brands">Brands</string>

    <string-array name="brandsArray">
        <item>Almay</item>
        <item>Alva</item>
        <item>Anna Sui</item>
        <item>Annabelle</item>
        <item>Benefit</item>
        <item>Boosh</item>
        <item>Burts Bees</item>
        <item>Butter London</item>
        <item>cest moi</item>
        <item>cargo cosmetics</item>
        <item>china glaze</item>
        <item>clinique</item>
        <item>coastal classic creation</item>
        <item>colourpop</item>
        <item>covergirl</item>
        <item> dalish</item>
        <item>deciem</item>
        <item>dior</item>
        <item>dr. hauschka</item>
        <item>e.l.f.</item>
        <item>essie</item>
        <item>fenty</item>
        <item>glossier</item>
        <item>green people</item>
        <item>iman</item>
        <item>loreal</item>
        <item> lotus cosmetics usa</item>
        <item>maias mineral galaxy</item>
        <item>marcelle</item>
        <item>marienatie</item>
        <item>maybelline</item>
        <item>milani</item>
        <item>mineral fusion</item>
        <item>misa</item>
        <item>mistura</item>
        <item>moov</item>
        <item>nudus</item>
        <item>nyx</item>
        <item>orly</item>
        <item>pacifica</item>
        <item>penny lane organics</item>
        <item>physicians formula</item>
        <item>piggy paint</item>
        <item>pure anada</item>
        <item>rejuva minerals</item>
        <item>revlon</item>
        <item>sally bs skin yummies</item>
        <item>salon perfect</item>
        <item>sante</item>
        <item>sinful colours</item>
        <item>smashbox</item>
        <item>stila</item>
        <item>suncoat</item>
        <item>w3llpeople</item>
        <item>wet n wild</item>
        <item>zorah</item>
        <item>zorah biocosmetiques</item>
    </string-array>
    <string name="youHave">You Have</string>
    <string name="products">Item(s)</string>
    <string name="color">Color:</string>
    <string name="noItemsText">You haven\'t added anything yet.</string>
    <string name="addProducts_button">Add Items</string>
    <string name="deleteAll">Delete all Products</string>

    <string-array name="product_type">
        <item>Blush</item>
        <item>Bronzer</item>
        <item>Eyebrow</item>
        <item>Eyeliner</item>
        <item>Eyeshadow</item>
        <item>Foundation</item>
        <item>Lip liner</item>
        <item>Lipstick</item>
        <item>Mascara</item>
        <item>Nail polish</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youWant">You Want</string>

    <string-array name="foundationArray">
        <item>Liquid</item>
        <item>Contour</item>
        <item>Bb cc</item>
        <item>Concealer</item>
        <item>Cream</item>
        <item>Mineral</item>
        <item>Powder</item>
        <item>Highlighter</item>
    </string-array>

    <string-array name="eyelinerArray">
        <item>Liquid</item>
        <item>Pencil</item>
        <item>Gel</item>
        <item>Cream</item>
    </string-array>

    <string-array name="lipstickArray">
        <item>Lipstick</item>
        <item>Lip gloss</item>
        <item>Liquid</item>
        <item>Lip stain</item>
    </string-array>

    <string-array name="eyeShadowArray">
        <item>Palette</item>
        <item>Pencil</item>
        <item>Cream</item>
    </string-array>

    <string-array name="blushArray">
        <item>Powder</item>
        <item>Cream</item>
    </string-array>

    <string-array name="MakeupArray">
        <item>EyeBrow</item>
        <item>Eyeliner</item>
        <item>Eyeshadow</item>
        <item>Mascara</item>
        <item>Blush</item>
        <item>Bronzer</item>
        <item>Foundation</item>
        <item>Lip liner</item>
        <item>Lipstick</item>
        <item>Nail polish</item>
    </string-array>

    <string-array name="categoryEyesArray">
        <item>EyeBrow</item>
        <item>Eyeliner</item>
        <item>Eyeshadow</item>
        <item>Mascara</item>
    </string-array>

    <string-array name="categoryFaceArray">
        <item>Blush</item>
        <item>Bronzer</item>
        <item>Foundation</item>
    </string-array>

    <string-array name="categoryLipsArray">
        <item>Lip liner</item>
        <item>Lipstick</item>
    </string-array>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="makeUp">Makeup</string>
    <string name="pencil">Pencil</string>
    <string name="powder">Powder</string>
    <string name="share">Share</string>
    <string name="shareMakeupBook">Share Makeup Book</string>
    <string name="share_type">text/plain</string>
    <string name="shareText">Hey Check out this new App Makeup Book</string>
    <string name="nailPolishTitle">Nail Polish</string>
    <string name="high_rated_text">Top Rated Products</string>
    <string name="featuredTags">Featured Tags</string>

    <string-array name="tagsArray">
        <item>Natural</item>
        <item>Organic</item>
        <item>silicone free</item>
        <item>Non-GMO</item>
        <item>Chemical Free</item>
        <item>Dairy Free</item>
        <item>Gluten Free</item>
        <item>USDA Organic</item>
        <item>Vegan</item>
        <item>cruelty free</item>

    </string-array>
    <string-array name="tagsImageArray">
        <item>https://d3t32hsnjxo7q6.cloudfront.net/i/4daf84bee451c265ec04f7cc1b8bb7c3_ra,w158,h184_pa,w158,h184.jpeg</item>
        <item>https://www.purpicks.com/wp-content/uploads/2018/03/lotus-cosmetics-usa-creme-to-powder-blush.png</item>
        <item>https://3bc01d2807fb1bc0d25c-a86d2521f1af8989841b9619f5314be5.ssl.cf1.rackcdn.com/products/market-img/rdn-coverage-foundation-33-n-30ml.png?v=daa322f179d80e450613c75826602292</item>
        <item>https://d3t32hsnjxo7q6.cloudfront.net/i/43071cd57ecffc55c1e0bff29278c3a7_ra,w158,h184_pa,w158,h184.jpeg</item>
        <item>https://cdn.shopify.com/s/files/1/1016/3243/products/LIPBALM_LID_grande.jpg?v=1496848378</item>
        <item>https://d3t32hsnjxo7q6.cloudfront.net/i/65ca894afba3c4351a3db71c24234c50_ra,w158,h184_pa,w158,h184.jpg</item>
        <item>https://d3t32hsnjxo7q6.cloudfront.net/i/4d7d79376ed827d7e587d849e16f2136_ra,w158,h184_pa,w158,h184.jpg</item>
        <item>https://www.purpicks.com/wp-content/uploads/2018/03/lotus-cosmetics-usa-eye-shadow-palette-deluxe.png</item>
        <item>https://cdn.shopify.com/s/files/1/1338/0845/collections/lippie-pencil_grande.jpg?v=1512588769</item>
        <item>https://cdn.shopify.com/s/files/1/1338/0845/products/foundations-lineup_800x1200.jpg?v=1528927785</item>
    </string-array>

    <string name="buyNow">Buy Now</string>
    <string name="haveButton_title">I have this item</string>
    <string name="wantButton_title">I want to buy this</string>
    <string name="itemDescriptionText">About this product</string>
    <string name="seeAll">See all the products</string>
    <string name="itemAddedToHaveList">Item added to I have list</string>
    <string name="item_added_havelist">Item added to have List</string>
    <string name="transition_photoenter">Treasition entername</string>
    <string name="transition_product_details">praduct details transaction</string>
    <string name="chooseHave">Choose the colour You have</string>
    <string name="chooseWant">Choose the colour you want</string>
    <string name="selectColor">Please select a color</string>
    <string name="liquid">Liquid</string>
    <string name="gel">Gel</string>
    <string name="cream">Cream</string>
    <string name="palette">Palette</string>
    <string name="contour">Contour</string>
    <string name="bbcc">Bb cc</string>
    <string name="concealer">Concealer</string>
    <string name="minaral">Mineral</string>
    <string name="highlighter">Highlighter</string>
    <string name="lipgloss">Lip Gloss</string>
    <string name="lip_stain">Lip stain</string>
    <string name="customerRating">Rating</string>
    <string name="ratingHigh">Rating above 4.0</string>
    <string name="ratingmid">Rating above 3.0</string>
    <string name="rating_any">Any Rating</string>
    <string name="price">Price</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_share">Action share</string>

</resources>
