<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_eyes"
            android:icon="@drawable/ic_eyes"
            android:title="@string/eyes" />
        <item
            android:id="@+id/nav_face"
            android:icon="@drawable/ic_face"
            android:title="@string/face" />
        <item
            android:id="@+id/nav_lips"
            android:icon="@drawable/ic_lipstick"
            android:title="@string/lips" />

        <item
            android:id="@+id/nav_nails"
            android:icon="@drawable/ic_nails"
            android:title="@string/nails" />
    </group>

    <item android:title="@string/view_list">
        <menu>
            <item
                android:id="@+id/nav_iHave"
                android:icon="@drawable/ic_have_yes"
                android:title="@string/havePage_title" />
            <item
                android:id="@+id/nav_iWant"
                android:icon="@drawable/ic_want_cart"
                android:title="@string/wantPage_title" />
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favPage" />
        </menu>
    </item>

    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_signOut"
        android:title="@string/signOut" />

</menu>
