<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_5dp"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".accounts.ForgotPasswordActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_100"
        android:layout_marginTop="@dimen/dimen_height_50"
        android:src="@drawable/ic_bag"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_10"
        android:padding="@dimen/margin_5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetText"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_10"
        android:padding="@dimen/margin_5dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_50"
        android:id="@+id/email_id"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginRight="@dimen/margin_5dp"
        android:hint="@string/resendemail"
        android:gravity="center"
        android:background="@color/light_background"
        android:inputType="textEmailAddress" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_50"
        android:id="@+id/resetPassword_id"
        android:layout_margin="@dimen/margin_20"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/resetPassword" />


</LinearLayout>